--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   },
   "dependencies": {
     "@testing-library/react": "^13.3.0",
+    "ace-builds": "^1.5.3",
     "classnames": "^2.3.1",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.7",
     "electron-store": "^8.0.1",
     "electron-updater": "^5.0.1",
     "react": "^18.0.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.0.0",
     "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.3",
     "react-quill": "^1.3.5",
     "react-syntax-highlighter": "^15.5.0",
+    "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.3",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
