--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "app:build": "yarn build:for:electron && yarn electron:builder"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
+    "@nextui-org/react": "^1.0.0-beta.9",
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
     "classnames": "^2.3.1",
@@ -22,8 +24,10 @@
     "electron-log": "^4.4.7",
     "electron-store": "^8.0.1",
     "electron-updater": "^5.0.1",
+    "patch-package": "^6.4.7",
     "react": "^18.0.0",
     "react-ace": "^10.1.0",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.0.0",
     "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.3",
