--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "topolar_textbook_editor",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "electron/electron.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
-    "electron:pack": "electron-builder --dir",
+    "electron:pack": "yarn build && electron-builder build",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"electron .\"",
     "electron:builder": "electron-builder",
     "build:for:electron": "cross-env ELECTRON=true vite build",
-    "app:build": "yarn build:for:electron && yarn electron:builder"
+    "app:build": "yarn build:for:electron && yarn electron:builder",
+    "deploy": "electron-builder --windows nsis:ia32",
+    "deploy:mac": "electron-builder --mac"
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
@@ -35,11 +37,11 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.3",
+    "recoil": "^0.7.4",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.52.2",
-    "sass-loader": "^13.0.0",
-    "smalltalk": "4.0.7"
+    "sass-loader": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -47,20 +49,20 @@
     "@vitejs/plugin-react": "^1.3.0",
     "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
-    "electron": "^19.0.1",
+    "electron": "^19.0.8",
     "electron-builder": "^23.0.3",
-    "vite": "^2.9.9",
+    "vite": "2.9.14",
     "wait-on": "^6.0.1"
   },
   "build": {
-    "productName": "textbook_editor",
-    "appId": "com.electron.textbookeditor",
+    "productName": "topolar_textbook_editor",
+    "appId": "com.electron.topolartextbookeditor",
     "asar": false,
     "extends": null,
     "protocols": {
-      "name": "textbook_editor",
+      "name": "topolar_textbook_editor",
       "schemes": [
-        "textbook_editor"
+        "topolar_textbook_editor"
       ]
     },
     "publish": [
