--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.0.0",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-quill": "^1.3.5",
     "react-syntax-highlighter": "^15.5.0",
