--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-player": "^2.10.1",
     "react-quill": "^1.3.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.2",
