--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
     "@nextui-org/react": "^1.0.0-beta.9",
+    "@stitches/react": "^1.2.8",
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
     "classnames": "^2.3.1",
