--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
     "@nextui-org/react": "^1.0.0-beta.9",
+    "@stitches/react": "^1.2.8",
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
     "classnames": "^2.3.1",
@@ -34,6 +35,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-player": "^2.10.1",
     "react-quill": "^1.3.5",
     "react-syntax-highlighter": "^15.5.0",
     "react-transition-group": "^4.4.2",
