--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "topolar_textbook_editor",
-  "private": false,
-  "version": "0.0.2",
+  "version": "0.0.5",
   "main": "electron/electron.js",
   "homepage": "./",
   "scripts": {
@@ -9,17 +8,17 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
-    "electron:pack": "yarn build && electron-builder build -c.extraMetadata.main=electron/electron.js",
-    "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"electron .\"",
+    "electron:pack": "pnpm build && electron-builder build -c.extraMetadata.main=electron/electron.js",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none pnpm dev\" \"electron .\"",
     "electron:builder": "electron-builder",
     "build:for:electron": "cross-env ELECTRON=true vite build",
-    "app:build": "yarn build:for:electron && yarn electron:builder",
-    "deploy": "electron-builder --windows nsis:ia32",
+    "app:build": "pnpm build:for:electron && pnpm electron:builder",
+    "deploy": "electron-builder --windows --x64",
     "deploy:mac": "electron-builder --mac"
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
-    "@nextui-org/react": "^1.0.0-beta.9",
+    "@nextui-org/react": "v1.0.8-beta.5",
     "@stitches/react": "^1.2.8",
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
@@ -28,10 +27,14 @@
     "electron-log": "^4.4.7",
     "electron-store": "^8.0.1",
     "electron-updater": "^5.0.1",
+    "events": "^3.3.0",
     "patch-package": "^6.4.7",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-ace": "^10.1.0",
-    "react-confirm-alert": "^3.0.2",
+    "react-aria": "^3.18.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
@@ -55,13 +58,13 @@
     "cross-env": "^7.0.3",
     "electron": "^19.0.8",
     "electron-builder": "23.0.3",
-    "vite": "2.9.14",
+    "vite": "^3.0.4",
     "wait-on": "^6.0.1"
   },
   "build": {
     "productName": "topolar_textbook_editor",
     "appId": "com.electron.topolartextbookeditor",
-    "asar": false,
+    "asar": true,
     "extends": null,
     "protocols": {
       "name": "topolar_textbook_editor",
@@ -84,8 +87,7 @@
       "icon": "./resources/installer/Icon.ico"
     },
     "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "oneClick": true
     },
     "directories": {
       "buildResources": "./resources/installer/",
