--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         id: gitTagCheck 
         with:
           tag: "v${{ steps.get_version.outputs.version }}"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
 
       - name: Does not run because tag is exists
         run: |
@@ -59,7 +59,7 @@ jobs:
         uses: pkgdeps/git-tag-action@v2
         if: ${{ steps.gitTagCheck.outputs.tag == '' }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           github_repo: ${{ github.repository }}
           version: ${{ steps.get_version.outputs.version }}
           git_commit_sha: ${{ github.sha }}
@@ -75,7 +75,7 @@ jobs:
           publish: true
           # prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Check Upload Url
         if: ${{ steps.gitTagCheck.outputs.tag == '' }}
@@ -85,7 +85,7 @@ jobs:
         uses: peter-evans/repository-dispatch@v2
         if: ${{ steps.gitTagCheck.outputs.tag == '' }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           repository: pressogh/topolar_textbook_editor
           event-type: upload-assets
           client-payload: '{ "url": "${{ steps.release_drafter.outputs.upload_url }}" }'
