--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
-    "electron:pack": "pnpm build && electron-builder build -c.extraMetadata.main=electron/electron.js",
+    "electron:pack": "yarn build && electron-builder build -c.extraMetadata.main=electron/electron.js",
     "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"electron .\"",
     "electron:builder": "electron-builder",
     "build:for:electron": "cross-env ELECTRON=true vite build",
