--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,10 @@ jobs:
       - name: Upload Assets
         uses: csexton/release-asset-action@v2
         with:
-          pattern: "dist/*"
+          pattern: |
+            "dist/lastest*.yml",
+            "dist/*.exe",
+            "dist/*.dmg",
+            "dist/*.zip"
           github-token: ${{ secrets.GH_TOKEN }}
           release-url: ${{ steps.release_drafter.outputs.upload_url }}
