--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,8 +90,8 @@ jobs:
           mv dist/latest.yml dist/release
           mv dist/latest-mac.yml dist/release
           mv dist/topolar_textbook_editor-Setup-${{ steps.get_version.outputs.version }}.exe dist/release
-          mv dist/topolar_textbook_editor-${{ steps.get_version.outputs.version }}-arm64.dmg dist/release
-          mv dist/topolar_textbook_editor-${{ steps.get_version.outputs.version }}-arm64-mac.zip dist/release
+          mv dist/topolar_textbook_editor-${{ steps.get_version.outputs.version }}.dmg dist/release
+          mv dist/topolar_textbook_editor-${{ steps.get_version.outputs.version }}-mac.zip dist/release
 
       - name: Upload Assets
         uses: csexton/release-asset-action@v2
