--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,6 @@ jobs:
       - name: Upload Assets
         uses: csexton/release-asset-action@v2
         with:
-          pattern: "dist/release*"
+          pattern: "dist/release/*"
           github-token: ${{ secrets.GH_TOKEN }}
           release-url: ${{ steps.release_drafter.outputs.upload_url }}
