--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,10 @@ jobs:
         os: [macos-latest] #[macos-latest, ubuntu-latest, windows-latest]
     steps:
       - name: Add MacOS certs
-        if: matrix.os == 'macos-latest' && startsWith(github.ref, 'refs/tags/')
         run: chmod +x add-osx-cert.sh && ./add-osx-cert.sh
         env:
-          CERTIFICATE_OSX_APPLICATION: ${{ secrets.MAC_CERT }}
-          CERTIFICATE_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
+          MAC_CERT: ${{ secrets.MAC_CERT }}
+          MAC_CERT_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
 
       - name: Checkout
         uses: actions/checkout@v2
