--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     },
     "directories": {
       "buildResources": "./resources/installer/",
-      "output": "./build/",
+      "output": "./dist/",
       "app": "."
     }
   }
