--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-store": "^8.0.1",
     "electron-updater": "^5.0.1",
     "events": "^3.3.0",
+    "jquery": "^3.6.0",
     "patch-package": "^6.4.7",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
