--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,7 @@ jobs:
 
 
   build-windows:
+    needs: build-mac
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -126,7 +127,7 @@ jobs:
         run: yarn install
         
       - name: Pack
-        run: GH_TOKEN=${{ secrets.GH_TOKEN }} yarn electron:pack
+        run: yarn electron:pack
         
       - name: Copy build files
         run: |
@@ -135,46 +136,19 @@ jobs:
           cp dist/index.html build
           
       - name: Deploy
-        run: |
-          GH_TOKEN=${{ secrets.GH_TOKEN }} yarn deploy       
+        run: yarn deploy
+        
       - uses: bbonkr/get-version-action@v1.0.4
         id: get_version
         with:
           project: "./package.json"
 
-      - name: check git tag
-        uses: bbonkr/git-tag-check-action@v1.0.9
-        id: gitTagCheck 
-        with:
-          tag: "v${{ steps.get_version.outputs.version }}"
-          github_token: ${{ secrets.GH_TOKEN }}
-
-      - name: package-version-to-git-tag
-        uses: pkgdeps/git-tag-action@v2
-        if: ${{ steps.gitTagCheck.outputs.tag == '' }}
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          github_repo: ${{ github.repository }}
-          version: ${{ steps.get_version.outputs.version }}
-          git_commit_sha: ${{ github.sha }}
-          git_tag_prefix: "v"
-
-      - name: Release Drafter
-        id: release_drafter
-        if: ${{ steps.gitTagCheck.outputs.tag == '' }}
-        uses: release-drafter/release-drafter@v5
-        with:
-          config-name: release-drafter.yml
-          version: "v${{ steps.get_version.outputs.version }}"
-          publish: true
-          # prerelease: false
+      - name: Gets latest created release info
+        id: latest_release_info
+        uses: jossef/action-latest-release-info@v1.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
-      - name: Check Upload Url
-        if: ${{ steps.gitTagCheck.outputs.tag == '' }}
-        run: echo ${{ steps.release_drafter.outputs.upload_url }}
-        
+          
       - name: Change exe name
         run: mv "dist/topolar_textbook_editor Setup ${{ steps.get_version.outputs.version }}.exe" "dist/topolar_textbook_editor-Setup-${{ steps.get_version.outputs.version }}.exe"
         
@@ -189,4 +163,4 @@ jobs:
         with:
           pattern: "dist/release/*"
           github-token: ${{ secrets.GH_TOKEN }}
-          release-url: ${{ steps.release_drafter.outputs.upload_url }}
+          release-url: ${{ steps.latest_release_info.outputs.upload_url }}
