--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
     "axios": "^0.27.2",
+    "jquery": "^3.6.0",
     "classnames": "^2.3.1",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^4.4.7",
