--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
-    "@nextui-org/react": "v1.0.8-beta.5",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@stitches/react": "^1.2.8",
     "@testing-library/react": "^13.3.0",
     "ace-builds": "^1.5.3",
