--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,13 +26,25 @@ jobs:
         env:
           MAC_CERT: ${{ secrets.MAC_CERT }}
           MAC_CERT_PASSWORD: ${{ secrets.MAC_CERT_PASSWORD }}
-          
+            
       - name: Install Node.js, Npm
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+                
+      - name: Cache node modules
+        id: node-cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
           
       - name: Install dependencies
+        if: steps.node-cache.outputs.cache-hit != 'true'
         run: yarn install
         
       - name: Pack
@@ -120,7 +132,19 @@ jobs:
         with:
           node-version: '16'
           
+      - name: Cache node modules
+        id: node-cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+          
       - name: Install dependencies
+        if: steps.node-cache.outputs.cache-hit != 'true'
         run: yarn install
         
       - name: Pack
