--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,6 @@
 VITE_API_URL=tocol.info
+#VITE_API_URL=www.topolar.co.kr
+#VITE_API_URL=127.0.0.1:8000
+
+#VITE_API_PROTOCOL=http://
 VITE_API_PROTOCOL=https://
