--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "electron/electron.js",
     "homepage": "./",
     "scripts": {
+        "postinstall": "patch-package",
         "dev": "vite --mode development",
         "build": "vite build --mode production",
         "preview": "vite preview",
@@ -62,6 +63,7 @@
         "cross-env": "^7.0.3",
         "electron": "^19.0.8",
         "electron-builder": "23.0.3",
+        "postinstall-postinstall": "^2.1.0",
         "vite": "^3.0.4",
         "wait-on": "^6.0.1"
     },
