--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jszip": "^3.10.1",
         "patch-package": "^6.4.7",
         "prop-types": "^15.8.1",
+        "quill-image-compress": "^1.2.26",
         "react": "^18.0.0",
         "react-ace": "^10.1.0",
         "react-aria": "^3.18.0",
