--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-player": "^2.10.1",
         "react-quill": "^1.3.5",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^9.1.1",
         "react-transition-group": "^4.4.2",
         "reactstrap": "^9.0.3",
         "recoil": "^0.7.4",
