--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
     "dependencies": {
         "@formkit/auto-animate": "^1.0.0-beta.1",
-        "@nextui-org/react": "^1.0.0-beta.10",
+        "@nextui-org/react": "^1.0.0-beta.12",
         "@stitches/react": "^1.2.8",
         "@testing-library/react": "^13.3.0",
         "ace-builds": "^1.5.3",
@@ -44,6 +44,7 @@
         "react-dom": "^18.0.0",
         "react-html-parser": "^2.0.2",
         "react-icons": "^4.4.0",
+        "react-loader-spinner": "^5.3.4",
         "react-markdown": "^8.0.3",
         "react-player": "^2.10.1",
         "react-quill": "^1.3.5",
