--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
         "sass-loader": "^13.0.0"
     },
     "devDependencies": {
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react": "^3.0.1",
-        "concurrently": "^7.6.0",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^1.3.0",
+        "concurrently": "^7.2.1",
         "cross-env": "^7.0.3",
-        "electron": "^22.0.0",
-        "electron-builder": "^23.6.0",
+        "electron": "^19.0.8",
+        "electron-builder": "23.0.3",
         "postinstall-postinstall": "^2.1.0",
-        "vite": "^4.0.4",
-        "wait-on": "^7.0.1"
+        "vite": "^3.2.1",
+        "wait-on": "^6.0.1"
     },
     "build": {
         "productName": "topolar_textbook_editor",
