--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,6 @@ VITE_API_URL=tocol.info
 
 #VITE_API_PROTOCOL=http://
 VITE_API_PROTOCOL=https://
+
+VITE_API_MEDIA_URL=/uploads/test
+#VITE_API_MEDIA_URL=/uploads
